--- a/index.html
+++ b/index.html
@@ -1,2 +1,3 @@
 <h1>Hey bestie!</h1>
 <p>This is my web design website</p>
+<img src="https://food.fnr.sndimg.com/content/dam/images/food/fullset/2013/12/9/0/FNK_Cheesecake_s4x3.jpg.rend.hgtvcom.406.305.suffix/1387411272847.jpeg">
