--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
 <h1>Hey bestie!</h1>
 <p>This is my web design website</p>
+<h2>Cheesecake omg I'm so hungry</h2>
 <img src="https://food.fnr.sndimg.com/content/dam/images/food/fullset/2013/12/9/0/FNK_Cheesecake_s4x3.jpg.rend.hgtvcom.406.305.suffix/1387411272847.jpeg" alt="Cheesecake because I'm so hungry">
-<a href="https://www.foodnetwork.com/recipes/food-network-kitchen/cheesecake-recipe2-2011459"> Cheesecake recipe</a>
+<h2>Link to recipe</h2>
+<h3><a href="https://www.foodnetwork.com/recipes/food-network-kitchen/cheesecake-recipe2-2011459"> Cheesecake recipe</a></h3>
