--- a/index.html
+++ b/index.html
@@ -1,3 +1,9 @@
+<style>
+  h1
+  {
+    color: light pink;
+  }
+</style>
 <h1>Hey bestie!</h1>
 <p>This is my web design website</p>
 <h2>Cheesecake</h2>
