--- a/index.html
+++ b/index.html
@@ -2,6 +2,12 @@
   h1
   {
     color: light pink;
+    font-size: 38pt;
+  }
+  h2
+  {
+    color: light blue;
+    font-size: 24pt;
   }
 </style>
 <h1>Hey bestie!</h1>
