--- a/index.html
+++ b/index.html
@@ -3,17 +3,19 @@
   {
     color:lightpink;
     font-size: 38pt;
+    font:arial;
   }
   h2
   {
     color:lightblue;
     font-size: 24pt;
+    font:lobster;
   }
 </style>
 <h1>Hey bestie!</h1>
 <p>This is my web design website</p>
 <h2>Cheesecake</h2>
-<p><strong>omg I'm so hungry</strong></p>
+<p><strong>omg</strong> I'm so hungry</p>
 <img src="https://food.fnr.sndimg.com/content/dam/images/food/fullset/2013/12/9/0/FNK_Cheesecake_s4x3.jpg.rend.hgtvcom.406.305.suffix/1387411272847.jpeg" alt="Cheesecake because I'm so hungry">
 <h2> Link to recipe </h2>
 <h3> <a href="https://www.foodnetwork.com/recipes/food-network-kitchen/cheesecake-recipe2-2011459"> Cheesecake recipe</a> </h3>
