--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
   {
     color:lightpink;
     font-size: 38pt;
-    font:arial;
+    font-family:arial;
   }
   h2
   {
     color:lightblue;
     font-size: 24pt;
-    font:lobster;
+    font-family:lobster;
   }
 </style>
 <h1>Hey bestie!</h1>
