--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   {
     color:lightblue;
     font-size: 24pt;
-    font-family:lobster;
+    font-family:georgia;
   }
 </style>
 <h1>Hey bestie!</h1>
