--- a/Inspire.html
+++ b/Inspire.html
@@ -1,11 +1,11 @@
 <style>
-  h1
+  title
   {
     color: lightgreen;
     font-size: 38pt;
     font-family: georgia;
   }
-  h2
+  h1
   {
     color: lightpink;
     font-size: 24pt;
@@ -16,6 +16,13 @@
     font-family: georgia;
   }
 </style>
-<title>Jim Henson</title>
-<img src="https://static.wikia.nocookie.net/muppet/images/7/7f/Jim_Henson_surrounded_by_Muppets_Fraggles_Sesame.jpg/revision/latest?cb=20180330141504">
-<p>James Henson was the main creative mind behind the Muppet Show, Sesame Street, Labyrinth, The Dark Crystal, and many other integral children's shows throughout the decades. <br>While he may not be the most influential or revolutionary man, he brought joy and learning to children worldwide and certainly made the world a better place through his creative genius.</br></p>
+<head>
+  <title>Jim Henson</title>
+</head>
+<img src="https://static.tvtropes.org/pmwiki/pub/images/jim_henson_and_muppets.jpeg">
+
+<body>
+  <h1>James Henson was the main creative mind behind the Muppet Show, Sesame Street, Labyrinth, The Dark Crystal, and many other integral children's shows throughout the decades.</h1>
+  <p>While he may not be the most influential or revolutionary man, he brought joy and learning to children worldwide and certainly made the world a better place through his creative genius.</p>
+  <p>
+</body>
