--- a/Inspire.html
+++ b/Inspire.html
@@ -14,6 +14,7 @@
   p
   {
     font-family: georgia;
+    font-color: lightblue;
   }
 </style>
 <head>
@@ -22,7 +23,7 @@
 <img src="https://static.tvtropes.org/pmwiki/pub/images/jim_henson_and_muppets.jpeg">
 
 <body>
-  <h1>James Henson was the main creative mind behind the Muppet Show, Sesame Street, Labyrinth, The Dark Crystal, and many other integral children's shows throughout the decades.</h1>
+  <p>James Henson was the main creative mind behind the Muppet Show, Sesame Street, Labyrinth, The Dark Crystal, and many other integral children's shows throughout the decades.</p>
   <p>While he may not be the most influential or revolutionary man, he brought joy and learning to children worldwide and certainly made the world a better place through his creative genius.</p>
   <p>
 </body>
