--- a/Inspire.html
+++ b/Inspire.html
@@ -25,5 +25,5 @@
 <body>
   <p>James Henson was the main creative mind behind the Muppet Show, Sesame Street, Labyrinth, The Dark Crystal, and many other integral children's shows throughout the decades.</p>
   <p>While he may not be the most influential or revolutionary man, he brought joy and learning to children worldwide and certainly made the world a better place through his creative genius.</p>
-  <p>
+  <p>a href="https://www.henson.com/"Learn more</p>
 </body>
