--- a/Inspire.html
+++ b/Inspire.html
@@ -1,11 +1,13 @@
+<!DOCTYPE html>
+<html>
 <style>
-  title
+  h1
   {
     color: lightgreen;
     font-size: 38pt;
     font-family: georgia;
   }
-  h1
+  h2
   {
     color: lightpink;
     font-size: 24pt;
@@ -20,10 +22,13 @@
 <head>
   <title>Jim Henson</title>
 </head>
-<img src="https://static.tvtropes.org/pmwiki/pub/images/jim_henson_and_muppets.jpeg">
+
 
 <body>
+  <h1>Jim Henson</h1>
+  <img src="https://static.tvtropes.org/pmwiki/pub/images/jim_henson_and_muppets.jpeg">
   <p>James Henson was the main creative mind behind the Muppet Show, Sesame Street, Labyrinth, The Dark Crystal, and many other integral children's shows throughout the decades.</p>
   <p>While he may not be the most influential or revolutionary man, he brought joy and learning to children worldwide and certainly made the world a better place through his creative genius.</p>
-  <p>a href="https://www.henson.com/"Learn more</p>
+  <p><a href="https://www.henson.com/"><h2>Learn more</h2></a></p>
 </body>
+</html>
