--- a/Inspire.html
+++ b/Inspire.html
@@ -10,7 +10,7 @@
   h2
   {
     color: lightpink;
-    font-size: 24pt;
+    font-size: 14pt;
     font-family: georgia;
   }
   p
@@ -27,8 +27,8 @@
 <body>
   <h1>Jim Henson</h1>
   <img src="https://static.tvtropes.org/pmwiki/pub/images/jim_henson_and_muppets.jpeg">
-  <p>James Henson was the main creative mind behind the Muppet Show, Sesame Street, Labyrinth, The Dark Crystal, and many other integral children's shows throughout the decades.</p>
+  <h2>James Henson was the main creative mind behind the Muppet Show, Sesame Street, Labyrinth, The Dark Crystal, and many other integral children's shows throughout the decades.</h2>
   <p>While he may not be the most influential or revolutionary man, he brought joy and learning to children worldwide and certainly made the world a better place through his creative genius.</p>
-  <p><a href="https://www.henson.com/"><h2>Learn more</h2></a></p>
+  <p><a href="https://www.henson.com/">Learn more</a></p>
 </body>
 </html>
