--- a/Inspire.html
+++ b/Inspire.html
@@ -3,7 +3,7 @@
 <style>
   h1
   {
-    color: lightgreen;
+    color: limegreen;
     font-size: 38pt;
     font-family: georgia;
   }
@@ -30,5 +30,6 @@
   <h2>James Henson was the main creative mind behind the Muppet Show, Sesame Street, Labyrinth, The Dark Crystal, and many other integral children's shows throughout the decades.</h2>
   <p>While he may not be the most influential or revolutionary man, he brought joy and learning to children worldwide and certainly made the world a better place through his creative genius.</p>
   <p><a href="https://www.henson.com/">Learn more</a></p>
+  <p>Jim Henson is one of my heroes because of his dedication and positivity. His work brings so much nostalgia and happiness to everyone, and his legacy continues to this day.</p>
 </body>
 </html>
