--- a/index.html
+++ b/index.html
@@ -19,3 +19,11 @@
 <img src="https://food.fnr.sndimg.com/content/dam/images/food/fullset/2013/12/9/0/FNK_Cheesecake_s4x3.jpg.rend.hgtvcom.406.305.suffix/1387411272847.jpeg" alt="Cheesecake because I'm so hungry">
 <h2> Link to recipe </h2>
 <h3> <a href="https://www.foodnetwork.com/recipes/food-network-kitchen/cheesecake-recipe2-2011459"> Cheesecake recipe</a> </h3>
+
+<h1>Links to past projects</h1>
+<h2>Template document</h2>
+<p><a href="https://mirandarightsss.github.io/template.html">Template.html</a></p>
+<h2>Inspiring person page</h2>
+<p><a href="https://mirandarightsss.github.io/Inspire.html">Inspire.html</a></p>
+<h2>Funny websites</h2>
+<p><a href="https://mirandarightsss.github.io/Amuse.html">Amuse.html</a></p>
