--- a/educate.html
+++ b/educate.html
@@ -28,5 +28,14 @@
   <h1>Y'all ready to get learned?</h1>
   <section>
     <h2>TED Talks</h2>
-    <iframe src="https://embed.ted.com/talks/land/en/paola_antonelli_why_pasta_comes_in_all_shapes_and_sizes" title="Why Pasta comes in All Shapes and Sizes" width="854" height="480" style="postion:absolute;left:0;top:0> 
+    <iframe src="https://embed.ted.com/talks/land/en/paola_antonelli_why_pasta_comes_in_all_shapes_and_sizes" title="Why Pasta comes in All Shapes and Sizes" width="854" height="480"> 
+    <br>
+    <iframe src="https://embed.ted.com/talks/danielle_feinberg_the_magic_ingredient_that_brings_pixar_movies_to_life" title="The Magic Ingredient in Pixar Movies" width="854" height="480">
+  </section>
+  <section>
+    <h2>RSA Animates</h2>
+    <iframe src="https://embed..thersa.org/video/animates/rsa-minimate/2018/sleep-or-die--matthew-walker" title="SLeep or Die" width="854" height="480"> 
+    <br>
+    <iframe src="https://embed.thersa.org/video/animates/2010/04/rsa-animate---drive" title="Drive-What Motivates us" width="854" height="480">
+  </section>
 </body>
