--- a/template.html
+++ b/template.html
@@ -1,6 +1,24 @@
 <!DOCTYPE html>
 <html>
-
+<style>
+  h1
+  {
+    color: limegreen;
+    font-size: 38pt;
+    font-family: georgia;
+  }
+  h2
+  {
+    color: lightpink;
+    font-size: 14pt;
+    font-family: georgia;
+  }
+  p
+  {
+    font-family: georgia;
+    font-color: lightblue;
+  }
+</style>
 <head>
   <title>Template</title>
 </head>
