--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 </style>
 <h1>Hey bestie!</h1>
 <p>This is my web design website</p>
+<img src="UNClogo.png" alt="UNC logo">
 <h2>Cheesecake</h2>
 <p><strong>omg</strong> I'm so hungry</p>
 <img src="https://food.fnr.sndimg.com/content/dam/images/food/fullset/2013/12/9/0/FNK_Cheesecake_s4x3.jpg.rend.hgtvcom.406.305.suffix/1387411272847.jpeg" alt="Cheesecake because I'm so hungry">
@@ -21,9 +22,10 @@
 <h3> <a href="https://www.foodnetwork.com/recipes/food-network-kitchen/cheesecake-recipe2-2011459"> Cheesecake recipe</a> </h3>
 
 <h1>Links to past projects</h1>
-<h2>Template document</h2>
-<p><a href="https://mirandarightsss.github.io/template.html">Template.html</a></p>
-<h2>Inspiring person page</h2>
-<p><a href="https://mirandarightsss.github.io/Inspire.html">Inspire.html</a></p>
-<h2>Funny websites</h2>
-<p><a href="https://mirandarightsss.github.io/Amuse.html">Amuse.html</a></p>
+  <ul>
+    <li><a href="https://mirandarightsss.github.io/template.html">Template.html</a></li>
+    <li><a href="https://mirandarightsss.github.io/Inspire.html">Inspire.html</a></li>
+    <li><a href="https://mirandarightsss.github.io/Amuse.html">Amuse.html</a></li>
+    <li><a href="https://mirandarightsss.github.io/educate.html">educate.html</a></li>
+    <li><a href="https://mirandarightsss.github.io/profile.html">profile.html</a></li>
+  </ul>
