--- a/profile.html
+++ b/profile.html
@@ -25,7 +25,7 @@
 
 <body>
   <h1>Miranda Hoyman</h1>
-  <img src="20220318_122956.jpg">
+  <img src="https://m.media-amazon.com/images/I/61X6TToE4fL._AC_UF894,1000_QL80_.jpg" alt="I had to use Lightning Mcqueen since I coudn't figure out the actual picture>
   <p>Here's a list of some of my favorite things</p>
   <ul>
     <li>Pasta (any kind, any sauce)</li>
