--- a/educate.html
+++ b/educate.html
@@ -34,7 +34,7 @@
   </section>
   <section>
     <h2>RSA Animates</h2>
-    <iframe src="https://embed..thersa.org/video/animates/rsa-minimate/2018/sleep-or-die--matthew-walker" title="SLeep or Die" width="854" height="480"> 
+    <iframe src="https://embed.thersa.org/video/animates/rsa-minimate/2018/sleep-or-die--matthew-walker" title="SLeep or Die" width="854" height="480"> 
     <br>
     <iframe src="https://embed.thersa.org/video/animates/2010/04/rsa-animate---drive" title="Drive-What Motivates us" width="854" height="480">
   </section>
