--- a/educate.html
+++ b/educate.html
@@ -28,9 +28,9 @@
   <h1>Y'all ready to get learned?</h1>
   <section>
     <h2>TED Talks</h2>
-    <iframe src="<iframe src="https://embed.ted.com/talks/lang/en/paola_antonelli_why_pasta_comes_in_all_shapes_and_sizes" width="854" height="480</iframe>" title="Why Pasta comes in All Shapes and Sizes" width="854" height="480"> 
+    <iframe src="https://embed.ted.com/talks/lang/en/paola_antonelli_why_pasta_comes_in_all_shapes_and_sizes" width="854" height="480</iframe>
     <br>
-    <iframe src="https://embed.ted.com/talks/danielle_feinberg_the_magic_ingredient_that_brings_pixar_movies_to_life" title="The Magic Ingredient in Pixar Movies" width="854" height="480">
+    <iframe src="https://embed.ted.com/talks/lang/en/danielle_feinberg_the_magic_ingredient_that_brings_pixar_movies_to_life" width="854" height="480"></iframe>
   </section>
   <section>
     <h2>RSA Animates</h2>
