--- a/educate.html
+++ b/educate.html
@@ -30,12 +30,12 @@
     <h2>TED Talks</h2>
     <iframe src="https://embed.ted.com/talks/lang/en/paola_antonelli_why_pasta_comes_in_all_shapes_and_sizes" width="854" height="480</iframe>
     <br>
-    <iframe src="https://embed.ted.com/talks/lang/en/danielle_feinberg_the_magic_ingredient_that_brings_pixar_movies_to_life" width="854" height="480"></iframe>
+    <iframe src="https://embed.ted.com/talks/lang/en/danielle_feinberg_the_magic_ingredient_that_brings_pixar_movies_to_life" width="854" height="480" style="position:absolute;left:0;top:0;width:100%;height:100%" frameborder="0" scrolling="no" allowfullscreen></iframe>
   </section>
   <section>
     <h2>RSA Animates</h2>
-    <iframe src="https://embed.thersa.org/video/animates/rsa-minimate/2018/sleep-or-die--matthew-walker" title="SLeep or Die" width="854" height="480"> 
+    <iframe src="https://www.youtube.com/watch?v=12XG-joFRBY" title="Sleep or Die" width="854" height="480"> 
     <br>
-    <iframe src="https://embed.thersa.org/video/animates/2010/04/rsa-animate---drive" title="Drive-What Motivates us" width="854" height="480">
+    <iframe src="https://www.youtube.com/watch?v=u6XAPnuFjJc&t=12s" title="Drive-What Motivates us" width="854" height="480">
   </section>
 </body>
