--- a/educate.html
+++ b/educate.html
@@ -28,14 +28,14 @@
   <h1>Y'all ready to get learned?</h1>
   <section>
     <h2>TED Talks</h2>
-    <iframe src="https://embed.ted.com/talks/lang/en/paola_antonelli_why_pasta_comes_in_all_shapes_and_sizes" width="747" height="394" frameborder="0" scrolling="no"</iframe>
+    <iframe src="https://embed.ted.com/talks/lang/en/paola_antonelli_why_pasta_comes_in_all_shapes_and_sizes" width="747" height="394" frameborder="0" scrolling="no"></iframe>
     <br>
     <iframe src="https://embed.ted.com/talks/lang/en/danielle_feinberg_the_magic_ingredient_that_brings_pixar_movies_to_life" 100%" width="747" height="394" frameborder="0" scrolling="no"></iframe>
   </section>
   <section>
     <h2>RSA Animates</h2>
-    <iframe src="https://www.youtube.com/watch?v=12XG-joFRBY" title="Sleep or Die" width="747" height="394" frameborder="0" scrolling="no"> 
+    <iframe src="https://www.youtube.com/watch?v=12XG-joFRBY" title="Sleep or Die" width="747" height="394" frameborder="0" scrolling="no"></iframe>
     <br>
-    <iframe src="https://www.youtube.com/watch?v=u6XAPnuFjJc&t=12s" title="Drive-What Motivates Us" width="747" height="394" frameborder="0" scrolling="no">
+    <iframe src="https://www.youtube.com/watch?v=u6XAPnuFjJc&t=12s" title="Drive-What Motivates Us" width="747" height="394" frameborder="0" scrolling="no"></iframe>
   </section>
 </body>
