--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <ul>
     <li><a href="https://mirandarightsss.github.io/template.html">Template.html</a></li>
     <li><a href="https://mirandarightsss.github.io/Inspire.html">Inspire.html</a></li>
-    <li><a href="https://mirandarightsss.github.io/Amuse.html">Amuse.html</a></li>
+    <li><a href="https://mirandarightsss.github.io/amuse.html">amuse.html</a></li>
     <li><a href="https://mirandarightsss.github.io/educate.html">educate.html</a></li>
     <li><a href="https://mirandarightsss.github.io/profile.html">profile.html</a></li>
   </ul>
