--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
 
 <h1>Links to past projects</h1>
   <ul>
-    <li><a href="https://mirandarightsss.github.io/template.html">Template.html</a></li>
-    <li><a href="https://mirandarightsss.github.io/Inspire.html">Inspire.html</a></li>
+    <li><a href="https://mirandarightsss.github.io/template.html">template.html</a></li>
+    <li><a href="https://mirandarightsss.github.io/inspire.html">inspire.html</a></li>
     <li><a href="https://mirandarightsss.github.io/amuse.html">amuse.html</a></li>
     <li><a href="https://mirandarightsss.github.io/educate.html">educate.html</a></li>
     <li><a href="https://mirandarightsss.github.io/profile.html">profile.html</a></li>
