--- a/amuse.html
+++ b/amuse.html
@@ -30,12 +30,12 @@
   
   <h2>1. Blob Opera</h2>
     <p>Google made this incredible work of art and it makes you feel like a real choir director!</p>
-    <p><a href="https://artsandculture.google.com/experiment/blob-opera/AAHWrq360NcGbw?hl=en">Here's the link</p>
+    <p><a href="https://artsandculture.google.com/experiment/blob-opera/AAHWrq360NcGbw?hl=en">Here's the link</a></p>
       
   <h2>2. Bee Game</h2>
     <p>Google also made this super simple game and it's so fun to play whenever you have a study break!</p>
-    <p><a href="https://www.google.com/doodles/earth-day-2020">Click here if you like jazz!</p>
+    <p><a href="https://www.google.com/doodles/earth-day-2020">Click here if you like jazz!</a></p>
       
   <h2>3. Find the invisible cow</h2>
     <p>This game is just hilarious! The cow starts mooing and you play hot-and-cold to find it</p>
-    <p><a href="https://findtheinvisiblecow.com/">MOOOOOOOOO</p>
+    <p><a href="https://findtheinvisiblecow.com/">MOOOOOOOOO</a></p>
