--- a/test.html
+++ b/test.html
@@ -3,19 +3,19 @@
 <style>
   h1
   {
-    color: limegreen;
+    color: rgb 175, 155, 222;
     font-size: 38pt;
-    font-family: georgia;
+    font-family: arial;
   }
   h2
   {
     color: lightpink;
     font-size: 14pt;
-    font-family: georgia;
+    font-family: arial;
   }
   p
   {
-    font-family: georgia;
+    font-family: arial;
     font-color: lightblue;
   }
 </style>
@@ -24,7 +24,7 @@
 </head>
 <h1>Pop Quiz!</h1>
  <table>
-   <thead style="background-color: aquamarine">
+   <thead style="background-color: rgb 155, 222, 216">
      <tr>
        <th style="border: 1px solid black">Page Name</th>
        <th style="border: 1px solid black">URL</th>
