--- a/test.html
+++ b/test.html
@@ -3,28 +3,17 @@
 <style>
   h1
   {
-    color: rgb 175, 155, 222;
+    color: violet;
     font-size: 38pt;
     font-family: arial;
   }
-  h2
-  {
-    color: lightpink;
-    font-size: 14pt;
-    font-family: arial;
-  }
-  p
-  {
-    font-family: arial;
-    font-color: lightblue;
-  }
 </style>
 <head>
-  <title>Template</title>
+  <title>Hope y'all studied</title>
 </head>
 <h1>Pop Quiz!</h1>
  <table>
-   <thead style="background-color: rgb 155, 222, 216">
+   <thead style="background-color: violet">
      <tr>
        <th style="border: 1px solid black">Page Name</th>
        <th style="border: 1px solid black">URL</th>
