--- a/test.html
+++ b/test.html
@@ -3,9 +3,9 @@
 <style>
   h1
   {
-    color: violet;
+    color: goldenrod;
     font-size: 38pt;
-    font-family: arial;
+    font-family: georgia;
   }
 </style>
 <head>
@@ -13,7 +13,7 @@
 </head>
 <h1>Pop Quiz!</h1>
  <table>
-   <thead style="background-color: violet">
+   <thead style="background-color: goldenrod">
      <tr>
        <th style="border: 1px solid black">Page Name</th>
        <th style="border: 1px solid black">URL</th>
