--- a/test.html
+++ b/test.html
@@ -22,22 +22,22 @@
    </thead>
    <tr>
      <th style="border: 1px solid black">Amuse</th>
-     <th style="border: 1px solid black"><a href="mirandarightsss.github.io/amuse.html">amuse.html</a></th>
+     <th style="border: 1px solid black"><a href="https://mirandarightsss.github.io/amuse.html">amuse.html</a></th>
      <th style="border: 1px solid black"><a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fmirandarightsss.github.io%2Famuse.html">VALIDATE</a></th>
    </tr>
    <tr>
      <th style="border: 1px solid black">Template</th>
-     <th style="border: 1px solid black"><a href="mirandarightsss.github.io/template.html">template.html</a></th>
+     <th style="border: 1px solid black"><a href="https://mirandarightsss.github.io/template.html">template.html</a></th>
      <th style="border: 1px solid black"><a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fmirandarightsss.github.io%2Ftemplate.html">VALIDATE</a></th>
    </tr>
    <tr>
      <th style="border: 1px solid black">Educate</th>
-     <th style="border: 1px solid black"><a href="mirandarightsss.github.io/educate.html">educate.html</a></th>
+     <th style="border: 1px solid black"><a href="https://mirandarightsss.github.io/educate.html">educate.html</a></th>
      <th style="border: 1px solid black"><a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fmirandarightsss.github.io%2Feducate.html">VALIDATE</a></th>
    </tr>
    <tr>
      <th style="border: 1px solid black">Index</th>
-     <th style="border: 1px solid black"><a href="mirandarightsss.github.io/index.html">index.html</a></th>
+     <th style="border: 1px solid black"><a href="https://mirandarightsss.github.io/index.html">index.html</a></th>
      <th style="border: 1px solid black"><a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fmirandarightsss.github.io%2Findex.html">VALIDATE</a></th>
    </tr>
    <tr>
@@ -47,7 +47,7 @@
    </tr>
    <tr>
      <th style="border: 1px solid black">Profile</th>
-     <th style="border: 1px solid black"><a href="mirandarightsss.github.io/profile.html">profile.html</a></th>
+     <th style="border: 1px solid black"><a href="https://mirandarightsss.github.io/profile.html">profile.html</a></th>
      <th style="border: 1px solid black"><a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fmirandarightsss.github.io%2Fprofile.html">VALIDATE</a></th>
    </tr>
  </table>
