--- a/test.html
+++ b/test.html
@@ -42,7 +42,7 @@
    </tr>
    <tr>
      <th style="border: 1px solid black">Inspire</th>
-     <th style="border: 1px solid black"><a href="mirandarightsss.github.io/inspire.html">inspire.html</a></th>
+     <th style="border: 1px solid black"><a href="https://mirandarightsss.github.io/inspire.html">inspire.html</a></th>
      <th style="border: 1px solid black"><a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fmirandarightsss.github.io%2Finspire.html">VALIDATE</a></th>
    </tr>
    <tr>
