--- a/test.html
+++ b/test.html
@@ -9,9 +9,9 @@
   }
 </style>
 <head>
-  <title>Hope y'all studied</title>
+  <title>Hope these work</title>
 </head>
-<h1>Pop Quiz!</h1>
+<h1>Website Testing</h1>
  <table>
    <thead style="background-color: goldenrod">
      <tr>
