--- a/educate.html
+++ b/educate.html
@@ -34,8 +34,8 @@
   </section>
   <section>
     <h2>RSA Animates</h2>
-    <iframe src="https://www.youtube.com/watch?v=12XG-joFRBY" title="RSA Animates: Sleep or Die" width="747" height="394" frameborder="0" scrolling="no"></iframe>
+    <iframe src="https://www.thersa.org/video/animates/rsa-minimate/2018/sleep-or-die--matthew-walker" title="RSA Animates: Sleep or Die" width="747" height="394" frameborder="0" scrolling="no"></iframe>
     <br>
-    <iframe src="https://www.youtube.com/watch?v=u6XAPnuFjJc&t=12s" title="RSA Animates: Drive-What Motivates Us" width="747" height="394" frameborder="0" scrolling="no"></iframe>
+    <iframe src="https://www.thersa.org/video/events/2010/01/drive" title="RSA Animates: Drive-What Motivates Us" width="747" height="394" frameborder="0" scrolling="no"></iframe>
   </section>
 </body>
