--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </style>
 <h1>Hey bestie!</h1>
 <p>This is my web design website</p>
-<img src="UNClogo.png" alt="UNC logo">
+<img src="https://uncbears.com/images/responsive_2018/unco_logo_bear.svg" alt="UNC logo">
 <h2>Cheesecake</h2>
 <p><strong>omg</strong> I'm so hungry</p>
 <img src="https://food.fnr.sndimg.com/content/dam/images/food/fullset/2013/12/9/0/FNK_Cheesecake_s4x3.jpg.rend.hgtvcom.406.305.suffix/1387411272847.jpeg" alt="Cheesecake because I'm so hungry">
