--- a/index.html
+++ b/index.html
@@ -28,4 +28,6 @@
     <li><a href="https://mirandarightsss.github.io/amuse.html">amuse.html</a></li>
     <li><a href="https://mirandarightsss.github.io/educate.html">educate.html</a></li>
     <li><a href="https://mirandarightsss.github.io/profile.html">profile.html</a></li>
+    <li><a href="https://mirandarightsss.github.io/test.html">test.html</a></li>
+    <li><a href="https://mirandarightsss.github.io/images">images</a></li>
   </ul>
