--- a/test.html
+++ b/test.html
@@ -50,4 +50,9 @@
      <th style="border: 1px solid black"><a href="https://mirandarightsss.github.io/profile.html">profile.html</a></th>
      <th style="border: 1px solid black"><a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fmirandarightsss.github.io%2Fprofile.html">VALIDATE</a></th>
    </tr>
+   <tr>
+     <th style="border: 1px solid black">Images</th>
+     <th style="border: 1px solid black"><a href="https://mirandarightsss.github.io/images">images</a></th>
+     <th style="border: 1px solid black"><a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fmirandarightsss.github.io%2Fimages">VALIDATE</a></th>
+   </tr>
  </table>
