--- a/profile.html
+++ b/profile.html
@@ -25,7 +25,7 @@
 
 <body>
   <h1>Miranda Hoyman</h1>
-  <img src="https://upload.wikimedia.org/wikipedia/en/8/82/Lightning_McQueen.png" alt="I had to use Lightning Mcqueen since I coudn't figure out the actual picture>
+  <img src="https://static.wikia.nocookie.net/worldofcarsdrivein/images/7/70/CotR_McQueen.png/revision/latest?cb=20220628092148" alt="I had to use Lightning Mcqueen since I coudn't figure out the actual picture>
   <p>Here's a list of some of my favorite things</p>
   <ul>
     <li>Pasta (any kind, any sauce)</li>
