--- a/amuse.html
+++ b/amuse.html
@@ -33,3 +33,6 @@
   <h2>3. Find the invisible cow</h2>
     <p>This game is just hilarious! The cow starts mooing and you play hot-and-cold to find it</p>
     <p><a href="https://findtheinvisiblecow.com/">MOOOOOOOOO</a></p>
+  
+  <h2>Link to index.html</h2>
+    <p><a href="https://mirandarightsss.github.io/index.html">Home</a></p>
