--- a/profile.html
+++ b/profile.html
@@ -33,4 +33,4 @@
     <li>Lightning McQueen (kachow)</li>
   </ul>
 </body>
-<h3> <a href="https://www.foodnetwork.com/recipes/food-network-kitchen/cheesecake-recipe2-2011459"> Cheesecake recipe</a> </h3>
+<h3> <a href="https://mirandarightsss.github.io/index.html"> Home</a> </h3>
