--- a/template.html
+++ b/template.html
@@ -1,5 +1,10 @@
 <!DOCTYPE html>
 <html>
+  
+<head>
+  <title>Template</title>
+</head>
+  
 <style>
   h1
   {
@@ -16,10 +21,8 @@
   p
   {
     font-family: georgia;
-    font-color: lightblue;
+    font-color: rgb(130, 226, 255);
   }
 </style>
-<head>
-  <title>Template</title>
-</head>
+
 <h1>Page Title</h1>
