--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
 <style>
+<html lang="en">
+
   h1
   {
     color:lightpink;
@@ -28,6 +30,5 @@
     <li><a href="https://mirandarightsss.github.io/amuse.html">amuse.html</a></li>
     <li><a href="https://mirandarightsss.github.io/educate.html">educate.html</a></li>
     <li><a href="https://mirandarightsss.github.io/profile.html">profile.html</a></li>
-    <li><a href="https://mirandarightsss.github.io/test.html">test.html</a></li>
     <li><a href="https://mirandarightsss.github.io/images">images</a></li>
   </ul>
