--- a/educate.html
+++ b/educate.html
@@ -21,7 +21,7 @@
   p
   {
     font-family: georgia;
-    font-color: lavender;
+    color: lavender;
   }
 </style>
 <body>
@@ -39,3 +39,4 @@
     <iframe src="https://www.youtube.com/watch?v=_mG-hhWL_ug" title="RSA Animates: Drive-What Motivates Us" width="747" height="394" frameborder="0" scrolling="no"></iframe>
   </section>
 </body>
+<h3> <a href="https://mirandarightsss.github.io/index.html"> Home</a> </h3>
