--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
     font-family:georgia;
   }
 </style>
+</head>
+
+<body>
   <h1>Hey bestie!</h1>
   <p>This is my web design website</p>
   <img src="https://uncbears.com/images/responsive_2018/unco_logo_bear.svg" alt="UNC logo">
@@ -24,11 +27,7 @@
   <p><strong>omg</strong> I'm so hungry</p>
   <img src="https://food.fnr.sndimg.com/content/dam/images/food/fullset/2013/12/9/0/FNK_Cheesecake_s4x3.jpg.rend.hgtvcom.406.305.suffix/1387411272847.jpeg" alt="Cheesecake because I'm so hungry">
   <h2> Link to recipe </h2>
-  <h3> <a href="https://www.foodnetwork.com/recipes/food-network-kitchen/cheesecake-recipe2-2011459"> Cheesecake recipe</a> </h3>
-</head>
-
-<body>
-  <h1>Links to past projects</h1>
+  <h3> <a href="https://www.foodnetwork.com/recipes/food-network-kitchen/cheesecake-recipe2-2011459"> Cheesecake recipe</a> </h3><h1>Links to past projects</h1>
     <ul>
       <li><a href="https://mirandarightsss.github.io/template.html">template.html</a></li>
       <li><a href="https://mirandarightsss.github.io/inspire.html">inspire.html</a></li>
