--- a/amuse.html
+++ b/amuse.html
@@ -3,24 +3,24 @@
   
 <head>
   <title>The internet is hilarious</title>
-</head>
-  
-<style>
-  h1
-  {
-    color: lightblue;
-    font-size: 38pt;
-    font-family: georgia;
-  }
-  h2
-  {
-    color: lightpink;
-    font-size: 14pt;
-    font-family: georgia;
-  }
-</style>
-  
 
+  <style>
+    h1
+    {
+      color: lightblue;
+      font-size: 38pt;
+      font-family: georgia;
+    }
+    h2
+    {
+      color: lightpink;
+      font-size: 14pt;
+      font-family: georgia;
+    }
+  </style>
+</head>
+
+<body>
 <h1>Howdy y'all!</h1>
   <p>This is a list of my favorite funny websites to visit when I'm procrastinating or just bored.</p>
   <p>I hope you like them as much as I do!</p>
@@ -39,3 +39,4 @@
   
 <h2>Link to index.html</h2>
     <p><a href="https://mirandarightsss.github.io/index.html">Home</a></p>
+</body>
