--- a/educate.html
+++ b/educate.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
   <title>Education time</title>
@@ -29,15 +29,15 @@
   <h1>Y'all ready to get learned?</h1>
   <section>
     <h2>TED Talks</h2>
-    <iframe src="https://embed.ted.com/talks/lang/en/paola_antonelli_why_pasta_comes_in_all_shapes_and_sizes" width="747" height="394" frameborder="0" scrolling="no"></iframe>
+    <iframe src="https://embed.ted.com/talks/lang/en/paola_antonelli_why_pasta_comes_in_all_shapes_and_sizes" width="747" height="394"></iframe>
     <br>
-    <iframe src="https://embed.ted.com/talks/lang/en/danielle_feinberg_the_magic_ingredient_that_brings_pixar_movies_to_life" 100%" width="747" height="394" frameborder="0" scrolling="no"></iframe>
+    <iframe src="https://embed.ted.com/talks/lang/en/danielle_feinberg_the_magic_ingredient_that_brings_pixar_movies_to_life" width="747" height="394"></iframe>
   </section>
   <section>
     <h2>RSA Animates</h2>
-    <iframe src="https://www.youtube.com/watch?v=12XG-joFRBY" title="RSA Animates: Sleep or Die" width="747" height="394" frameborder="0" scrolling="no"></iframe>
+    <iframe src="https://www.youtube.com/watch?v=12XG-joFRBY" title="RSA Animates: Sleep or Die" width="747" height="394"></iframe>
     <br>
-    <iframe src="https://www.youtube.com/watch?v=_mG-hhWL_ug" title="RSA Animates: Drive-What Motivates Us" width="747" height="394" frameborder="0" scrolling="no"></iframe>
+    <iframe src="https://www.youtube.com/watch?v=_mG-hhWL_ug" title="RSA Animates: Drive-What Motivates Us" width="747" height="394"></iframe>
   </section>
+  <h3> <a href="https://mirandarightsss.github.io/index.html"> Home</a> </h3>
 </body>
-<h3> <a href="https://mirandarightsss.github.io/index.html"> Home</a> </h3>
