--- a/profile.html
+++ b/profile.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
-<html>
-<style>
+<html lang="en">
+
+<head>
+  <style>
   h1
   {
     color: lavender;
@@ -16,21 +18,20 @@
   p
   {
     font-family: georgia;
-    font-color: lightblue;
+    color: lightblue;
   }
-</style>
-<head>
+  </style>
   <title>This is me</title>
 </head>
 
 <body>
   <h1>Miranda Hoyman</h1>
-  <img src="https://static.wikia.nocookie.net/worldofcarsdrivein/images/7/70/CotR_McQueen.png/revision/latest?cb=20220628092148" alt="I had to use Lightning Mcqueen since I coudn't figure out the actual picture>
+  <img src="https://cdn3.whatculture.com/images/2019/08/4d679bd476854895-600x338.jpg" alt="I had to use Dwight Schrute since I coudn't figure out the actual picture">
   <p>Here's a list of some of my favorite things</p>
   <ul>
     <li>Pasta (any kind, any sauce)</li>
     <li>My dog Lulu</li>
     <li>Lightning McQueen (kachow)</li>
   </ul>
+  <h3> <a href="https://mirandarightsss.github.io/index.html"> Home</a> </h3>
 </body>
-<h3> <a href="https://mirandarightsss.github.io/index.html"> Home</a> </h3>
